--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "d3": "^7.9.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "postcss": "^8",
