--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "meyda": "^5.6.3",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
